--- a/index.html
+++ b/index.html
@@ -295,27 +295,27 @@
               </div>
             </div>
             <div class="item carouselImageContainer">
-              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3393.jpg" class="carouselImage">
+              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3393.JPG" class="carouselImage">
             </div>
 
             <div class="item active carouselImageContainer" >
-              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3372.jpg" class="carouselImage">
+              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3372.JPG" class="carouselImage">
             </div>
 
             <div class="item carouselImageContainer">
-              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3377.jpg" class="carouselImage">
+              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3377.JPG" class="carouselImage">
             </div>
              <!---
             <div class="item carouselImageContainer">
-              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3380.jpg" class="carouselImage">
+              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3380.JPG" class="carouselImage">
             </div>
              --->
             <div class="item carouselImageContainer">
-              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3391.jpg" class="carouselImage">
+              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3391.JPG" class="carouselImage">
             </div>
 
             <div class="item carouselImageContainer">
-              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3382.jpg" class="carouselImage">
+              <img style="opacity: 0.8" src="images/curtainraiser/DSC_3382.JPG" class="carouselImage">
             </div>
 
           </div>
