--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>techNITi'19
-    </title>
+    </title> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="techNITi19 '19 | Expanding Horizons" />
     <meta name="keywords" content="axis, vnit, axisvnit, axis19, technical festival, nagpur, robowars, nagpur events, nagpur fest, techfest, workshops" />
@@ -283,11 +283,11 @@
         <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="2500">
           <div class="carousel-inner">
 
-            <div class="carousel-caption postText">
+            <div style = 'padding-top:10px;'class="carousel-caption postText">
               <div id="carouselHeading">
                 <span>TechNiTi'19 Curtain Raiser</span>
                 <br>
-                <div style="font-size:0.5em; text-shadow: 1px 1px #000000 ">TechNiTi '19 Curtain Raiser was held on May 3rd, 2019 at conference hall, IT Building.  The Chief Guest was Prof. L.K. Awasthi.  The Guest of honour
+                <div id ="cats">TechNiTi '19 Curtain Raiser was held on May 3rd, 2019 at conference hall, IT Building.  The Chief Guest was Prof. L.K. Awasthi.  The Guest of honour
                   was Er. Ishwar Sahai.  The Director of the institute launched the techNiTi '19 Website and Android Application.
 
                 </div>
